dropped row with N/A cells

--- a/MachineLearning/SensorReadings.ipynb
+++ b/MachineLearning/SensorReadings.ipynb
@@ -444,8 +444,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "8125ad83-9a78-4b14-8d32-2d0e2bf9bc6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>current</th>\n",
+       "      <th>date</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>power</th>\n",
+       "      <th>powerFactor</th>\n",
+       "      <th>time</th>\n",
+       "      <th>voltage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>00:00:00</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>59.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>233.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00:00:01</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>59.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>00:00:01</td>\n",
+       "      <td>233.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00:00:02</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>59.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>00:00:02</td>\n",
+       "      <td>233.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00:00:03</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>59.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>00:00:03</td>\n",
+       "      <td>233.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00:00:04</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>59.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>00:00:04</td>\n",
+       "      <td>233.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:55:26</th>\n",
+       "      <td>1.617</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>98.8</td>\n",
+       "      <td>352.8</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>15:55:26</td>\n",
+       "      <td>226.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:55:30</th>\n",
+       "      <td>1.617</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>98.8</td>\n",
+       "      <td>352.8</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>15:55:30</td>\n",
+       "      <td>226.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:55:35</th>\n",
+       "      <td>1.617</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>98.8</td>\n",
+       "      <td>352.8</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>15:55:35</td>\n",
+       "      <td>226.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:55:41</th>\n",
+       "      <td>1.617</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>98.8</td>\n",
+       "      <td>352.8</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>15:55:41</td>\n",
+       "      <td>226.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:55:42</th>\n",
+       "      <td>1.617</td>\n",
+       "      <td>11/02/2025</td>\n",
+       "      <td>98.8</td>\n",
+       "      <td>352.8</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>15:55:42</td>\n",
+       "      <td>226.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>51060 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          current        date  frequency  power  powerFactor      time  \\\n",
+       "00:00:00    0.000  11/02/2025       59.8    0.0         0.00  00:00:00   \n",
+       "00:00:01    0.000  11/02/2025       59.9    0.0         0.00  00:00:01   \n",
+       "00:00:02    0.000  11/02/2025       59.9    0.0         0.00  00:00:02   \n",
+       "00:00:03    0.000  11/02/2025       59.8    0.0         0.00  00:00:03   \n",
+       "00:00:04    0.000  11/02/2025       59.8    0.0         0.00  00:00:04   \n",
+       "...           ...         ...        ...    ...          ...       ...   \n",
+       "15:55:26    1.617  11/02/2025       98.8  352.8         0.96  15:55:26   \n",
+       "15:55:30    1.617  11/02/2025       98.8  352.8         0.96  15:55:30   \n",
+       "15:55:35    1.617  11/02/2025       98.8  352.8         0.96  15:55:35   \n",
+       "15:55:41    1.617  11/02/2025       98.8  352.8         0.96  15:55:41   \n",
+       "15:55:42    1.617  11/02/2025       98.8  352.8         0.96  15:55:42   \n",
+       "\n",
+       "          voltage  \n",
+       "00:00:00    233.9  \n",
+       "00:00:01    233.9  \n",
+       "00:00:02    233.8  \n",
+       "00:00:03    233.8  \n",
+       "00:00:04    233.9  \n",
+       "...           ...  \n",
+       "15:55:26    226.6  \n",
+       "15:55:30    226.6  \n",
+       "15:55:35    226.6  \n",
+       "15:55:41    226.6  \n",
+       "15:55:42    226.6  \n",
+       "\n",
+       "[51060 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a69a7711-ff7c-4b2c-b2ff-31df09865107",
    "metadata": {},
    "outputs": [],
    "source": []
