--- a/MachineLearning/Clustering.ipynb
+++ b/MachineLearning/Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "c5094f04-46e1-439a-b071-19dd7025d20a",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,17 @@
     "Davies Bouldin Score: The minimum score is zero, with lower values indicating better clustering.\n",
     "Calinski Harabasz Score: The score is a positive floating-point value, where higher values indicate better clustering.\n",
     "\"\"\"\n",
-    "from sklearn.metrics import silhouette_score, davies_bouldin_score, calinski_harabasz_score"
+    "from sklearn.metrics import silhouette_score, davies_bouldin_score, calinski_harabasz_score\n",
+    "\n",
+    "\"\"\"\n",
+    "Scaler for preprocessing\n",
+    "\"\"\"\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, RobustScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "id": "c3f8dfa1-2437-4e3f-911f-157996e412b7",
    "metadata": {},
    "outputs": [],
@@ -43,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "id": "8967731c-2aff-4260-ac59-e6cef2febff1",
    "metadata": {},
    "outputs": [
@@ -53,7 +58,7 @@
        "' The clustering algorithm and metrics score inside the dictionary datatype or a key-value pair data structure '"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "758326e5-6f0a-4eb1-b2b5-0e0bc378d974",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Clustering:\n",
-    "    \"\"\" The clustering algorithm inside the dictionary datatype or a key-value pair data structure \"\"\"\n",
-    "    # Clustering Algorithm Dictionary\n",
+    "    \"\"\" Flexible clustering class with optional scaler and metric selection \"\"\"\n",
+    "\n",
     "    CLUSTERS_DICT = {\n",
     "        'kmeans': lambda k, random_state: KMeans(n_clusters=k, random_state=random_state),\n",
     "        'spectral': lambda k, random_state: SpectralClustering(n_clusters=k, random_state=random_state, affinity='nearest_neighbors'),\n",
@@ -88,52 +93,70 @@
     "        'agglomerative': lambda k, random_state: AgglomerativeClustering(n_clusters=k),\n",
     "        'gaussian': lambda k, random_state: GaussianMixture(n_components=k, random_state=random_state),\n",
     "    }\n",
-    "    \n",
-    "    # Metrics\n",
+    "\n",
     "    METRICS_DICT = {\n",
     "        'silhouette': silhouette_score,\n",
     "        'davies': davies_bouldin_score,\n",
     "        'calinski': calinski_harabasz_score\n",
     "    }\n",
-    "    def __init__(self, X, model, random_state=42):\n",
-    "        self.X = X\n",
-    "        self.cluster_algo = model # Cluster algorithm name in string\n",
-    "        self.metric_best_score = None\n",
-    "        self.metric_scores = None\n",
-    "        self.random_state=random_state\n",
     "\n",
-    "    def find_n_cluster(self, metric, max_range=10):\n",
+    "    def __init__(self, X, model, metric='silhouette', scaler_class=None, random_state=42):\n",
+    "        self.random_state = random_state\n",
+    "        self.cluster_algo = model\n",
     "        self.metric = metric\n",
-    "        self.n_cluster, self.metric_best_score = self._compute_n(self.cluster_algo, metric, max_range)\n",
+    "        self.metric_best_score = None\n",
+    "        self.metric_scores = []\n",
+    "\n",
+    "        # Apply scaling if scaler_class is provided\n",
+    "        if scaler_class is not None:\n",
+    "            self.scaler = scaler_class()\n",
+    "            self.X = self.scaler.fit_transform(X)\n",
+    "        else:\n",
+    "            self.scaler = None\n",
+    "            self.X = X\n",
+    "\n",
+    "    def find_n_cluster(self, max_range=10):\n",
+    "        self.n_cluster, self.metric_best_score = self._compute_n(self.cluster_algo, self.metric, max_range)\n",
     "        return self.n_cluster, self.metric_best_score\n",
     "\n",
     "    def _compute_n(self, cluster_algo, metric, max_range):\n",
     "        self.metric_scores = []\n",
     "        best_score = float('-inf') if metric != 'davies' else float('inf')\n",
     "        best_n_cluster = None\n",
-    "        for k in range(2, max_range+1):\n",
+    "\n",
+    "        for k in range(2, max_range + 1):\n",
     "            y_labels = self._create_cluster_instance_fit_predict(k)\n",
-    "            score = METRICS_DICT[metric](self.X, y_labels) # metric(self.X, y_labels)\n",
+    "            score = self.METRICS_DICT[metric](self.X, y_labels)\n",
     "            self.metric_scores.append(score)\n",
+    "\n",
     "            if (metric == 'davies' and score < best_score) or (metric != 'davies' and score > best_score):\n",
     "                best_score = score\n",
-    "                best_n_cluster = k      \n",
-    "        # if metric==davies_bouldin_score:\n",
-    "        #     return best_n_cluster, best_score\n",
+    "                best_n_cluster = k\n",
+    "\n",
     "        return best_n_cluster, best_score\n",
-    "        \n",
+    "\n",
     "    def _create_cluster_instance_fit_predict(self, k):\n",
-    "        cluster_instance = CLUSTERS_DICT[self.cluster_algo](k, self.random_state)\n",
-    "        # Handle different fit and predict methods\n",
+    "        cluster_instance = self.CLUSTERS_DICT[self.cluster_algo](k, self.random_state)\n",
+    "\n",
     "        if hasattr(cluster_instance, 'fit_predict'):\n",
     "            return cluster_instance.fit_predict(self.X)\n",
+    "\n",
     "        cluster_instance.fit(self.X)\n",
-    "        return cluster_instance.predict(self.X)   "
+    "        return cluster_instance.predict(self.X)\n",
+    "\n",
+    "    def get_scaled_data(self):\n",
+    "        \"\"\"\n",
+    "        Returns:\n",
+    "            - The scaled (or raw) data\n",
+    "            - Name of the scaler used, or 'None'\n",
+    "        \"\"\"\n",
+    "        scaler_name = type(self.scaler).__name__ if self.scaler else \"None\"\n",
+    "        return self.X, scaler_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "12bfd9ba-a87e-4810-8d24-b9b3fefcad9a",
    "metadata": {},
    "outputs": [
@@ -171,7 +194,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 33,
+   "id": "c43f046d-023c-456c-9986-8879877f8f97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df_sensor_readings = pd.read_csv('Lorega(raw)_anomalous.csv')\n",
+    "# df_sensor_readings.head()\n",
+    "\n",
+    "data_X = df_sensor_readings[['current', 'frequency', 'power', 'powerFactor', 'voltage']]\n",
+    "data_X = data_X.dropna()\n",
+    "data_X = data_X[:1000]\n",
+    "data_X.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "d3637dbc-2d47-4f29-a907-d45a78692951",
    "metadata": {},
    "outputs": [
@@ -179,37 +231,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of best cluster: 3; Best Score: 6081.258040738072;\n"
+      "Number of best cluster: 9; Best Score: 0.6861919127435481;\n"
      ]
     }
    ],
    "source": [
-    "kmeans = Clustering(X, model='kmeans')\n",
-    "n_cluster, best_score = kmeans.find_n_cluster('calinski')\n",
+    "kmeans = Clustering(data_X, model='kmeans', scaler_class=StandardScaler)\n",
+    "n_cluster, best_score = kmeans.find_n_cluster(max_range=10)\n",
     "print(f'Number of best cluster: {n_cluster}; Best Score: {best_score};')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "id": "e7d528c4-0f18-4d2d-ae05-b3d37daeb3c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[np.float64(2076.4559971806098),\n",
-       " np.float64(6081.258040738072),\n",
-       " np.float64(4298.046882697102),\n",
-       " np.float64(3413.693887987223),\n",
-       " np.float64(2900.0087912909457),\n",
-       " np.float64(2521.9127130045244),\n",
-       " np.float64(2250.1230295081605),\n",
-       " np.float64(2070.279820347787),\n",
-       " np.float64(1925.3857330307542)]"
+       "[np.float64(0.5184147225013972),\n",
+       " np.float64(0.5521798703552381),\n",
+       " np.float64(0.6485967052822541),\n",
+       " np.float64(0.649231973785181),\n",
+       " np.float64(0.650886668730593),\n",
+       " np.float64(0.5949171162031216),\n",
+       " np.float64(0.6352412101006863),\n",
+       " np.float64(0.6861919127435481),\n",
+       " np.float64(0.6629215082413686)]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,8 +272,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "a6480bf8-92f8-4208-833e-c3213b2a7dc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaler: StandardScaler\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_data, scaler = kmeans.get_scaled_data()\n",
+    "print(f'Scaler: {scaler}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "24f1a29d-1105-4d0a-8896-036847a732c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[37], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mscaled_data\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'head'"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "302fbb84-5f81-498c-b02a-09fbe6b9162e",
    "metadata": {},
    "outputs": [],
    "source": []
